third_party/rust/chromium_crates_io/vendor/toml_edit-0.22.22/tests/fixtures/invalid/local-time/no-secs.stderr
TOML parse error at line 2, column 16
  |
2 | no-secs = 17:45
  |                ^
invalid time
